--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     <h1>Practica con Git</h1>
+   <form action="" method="post">
+       <div style="padding: 10px;">
+           <input type="text" placeholder="Ingrese Nombre">
+       </div>
+
+       <div style="padding: 10px;">
+        <input type="text" placeholder="Ingrese Apellido">
+     </div>
+     <div style="padding: 20px;">
+         <button type="submit">Enviar</button>
+     </div>
+   </form>
 </body>
 </html>
