--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
          <button type="submit">Enviar</button>
      </div>
    </form>
+    <div>
+        <img src="img/images.jpg" alt="">
+    </div>
+   
 </body>
 </html>
